# BiVa1-Projekt

./: 0-hinweise_Praxisprojekt_BiVa1.txt  bugs.txt  main.py
Project1/: CMakeLists.txt  Project1.cpp  Project1.h  Test.cpp  Test.h
